admin/planning/releases/v0.5.0/RELEASE-READINESS.md
---
version: v0.5.0
date: 2025-12-12
readiness_score: 80
blocking_failures: 1
total_checks: 5
passed_checks: 4
warnings: 1
status: NOT_READY
---

# Release Readiness Assessment - v0.5.0

**Purpose:** Assess project readiness for v0.5.0 release
**Date:** 2025-12-12
**Status:** 🟠 Assessment in Progress

---

## 📊 Overall Readiness Summary

**Overall Readiness Status:** 🔴 NOT READY  
**Blocking Issues:** 1 identified  
**Release Type:** Minor

**Key Takeaways:** 1 blocking criteria need attention before release.

---

## 📊 Release Criteria Evaluation

### 🧪 1. Testing & Quality (Blocking)
**Status:** ✅ PASS
**Evidence:**
<details>
<summary>CI/CD Test Status</summary>

✅ All tests passing


</details>

---

### 📄 2. Documentation (Blocking)
**Status:** ❌ FAIL
**Evidence:**
<details>
<summary>Documentation Status</summary>

- CHANGELOG updated: ❌ No
- Release notes created: ✅ Yes

**Details:** Check `CHANGELOG.md` and `admin/planning/releases/v0.5.0/RELEASE-NOTES.md`
</details>

---

### 💻 3. Code Quality (Blocking)
**Status:** ⚠️ NEEDS MANUAL REVIEW
**Evidence:**
- Manual review required for:
  - Critical bugs fixed
  - No blocking issues
  - Code review completed

---

### 🚀 4. Release Preparation (Blocking)
**Status:** ✅ PASS
**Evidence:**
<details>
<summary>Release Preparation Status</summary>

- Release branch created: ✅ Yes
- Version numbers updated: ✅ Yes



</details>

---

## 📊 Version Recommendation

**Recommended Version:** v0.5.0

**Rationale:** Automated checks need attention

---

## 🎯 Recommendation

**Status:** 🔴 NOT READY

**Next Steps:**
1. Review automated check results
2. Complete manual review sections
3. Address any failing checks

---

**Last Updated:** 2025-12-12
