admin/planning/releases/v0.7.0/RELEASE-READINESS.md
---
version: v0.7.0
date: 2025-12-18
readiness_score: 60
blocking_failures: 2
total_checks: 5
passed_checks: 3
warnings: 1
status: NOT_READY
---

# Release Readiness Assessment - v0.7.0

**Purpose:** Assess project readiness for v0.7.0 release
**Date:** 2025-12-18
**Status:** 🟠 Assessment in Progress

---

## 📊 Overall Readiness Summary

**Overall Readiness Status:** 🔴 NOT READY  
**Blocking Issues:** 2 identified  
**Release Type:** Minor

**Key Takeaways:** 2 blocking criteria need attention before release.

---

## 📊 Release Criteria Evaluation

### 🧪 1. Testing & Quality (Blocking)
**Status:** ❌ FAIL
**Evidence:**
<details>
<summary>CI/CD Test Status</summary>

❌ Tests not passing or CI check skipped

**Details:** Run `gh run list --limit 1` to check latest CI run status
</details>

---

### 📄 2. Documentation (Blocking)
**Status:** ❌ FAIL
**Evidence:**
<details>
<summary>Documentation Status</summary>

- CHANGELOG updated: ✅ Yes
- Release notes created: ❌ No

**Details:** Check `CHANGELOG.md` and `admin/planning/releases/v0.7.0/RELEASE-NOTES.md`
</details>

---

### 💻 3. Code Quality (Blocking)
**Status:** ⚠️ NEEDS MANUAL REVIEW
**Evidence:**
- Manual review required for:
  - Critical bugs fixed
  - No blocking issues
  - Code review completed

---

### 🚀 4. Release Preparation (Blocking)
**Status:** ✅ PASS
**Evidence:**
<details>
<summary>Release Preparation Status</summary>

- Release branch created: ✅ Yes
- Version numbers updated: ✅ Yes



</details>

---

## 📊 Version Recommendation

**Recommended Version:** v0.7.0

**Rationale:** Automated checks need attention

---

## 🎯 Recommendation

**Status:** 🔴 NOT READY

**Next Steps:**
1. Review automated check results
2. Complete manual review sections
3. Address any failing checks

---

**Last Updated:** 2025-12-18
